<resources>
    <string name="app_name">BambuPayMerchant</string>
    <string name="action_settings">Settings</string>
    <string name="action_documents">Documents</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menu_home">Home</string>
    <string name="menu_client_transfer">Client Fund Transfer</string>
    <string name="menu_cash_in">Cash In</string>
    <string name="menu_post_transfer">Pay Bills</string>
    <string name="menu_batch_transfer">Batch Fund Transfer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>
    <string name="menu_qr_code">QR Code</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_details">Sign in to access\nyour account</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="register_details">Please fill up this form to create an account.</string>
    <string name="capture_id">Capture ID card</string>
    <string name="account_details">Account Details</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Birthday</string>
    <string name="id_number">ID Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="card_details">Card Details</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiry_date">Expiry Date</string>
    <string name="card_cvv">CVV</string>
    <string name="agreement">I accept end-user license agreement.</string>
    <string name="city">City</string>
    <string name="house_no">House No. / Unit No. / Building</string>
    <string name="street">Street</string>
    <string name="barangay">Barangay</string>
    <string name="file_upload">File Upload</string>
    <string name="upload_docs">Upload Document Files</string>

    <string name="send">Send</string>

    <string name="skip">Skip</string>
    <string name="page1">Quick and easy</string>
    <string name="page2">Secure</string>
    <string name="page3">Reliable</string>
    <string name="page_demo">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</string>

    <string name="client_activity">Clients Activity</string>
    <string name="view_all">View all</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_active">Total Active Clients</string>
    <string name="total_available">Total Available Cards</string>
    <string name="total_available_balance">Total Available Balance</string>

    <string name="credit_transfer">Credit Transfer</string>
    <string name="merchant_wallet_balance">Merchant Wallet Balance</string>
    <string name="clients">Clients</string>
    <string name="transact">Transfer Fund</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="action_okay">Okay</string>
    <string name="signup_no_email">Please enter a valid email address</string>
    <string name="signup_no_password">Please enter a password that contains at least 8 characters</string>

    <string name="change_password">Change Password</string>
    <string name="additional_info">Additional Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="eula">EULA</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>

    <string name="dialog_logout">Are you sure you want to logout?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_logout">Logout</string>

    <string name="about_content">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="copyright">Copyright © 2020 BambuPay Merchant, All right reserved. </string>
    <string name="powered_by">Powered by www.uxi.rocks</string>

    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="send_money">Send Money</string>
    <string name="transaction_number">Transaction Number</string>
    <string name="scan">Scan</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="error">Error</string>
    <string name="error_transaction_number">Transaction number not found</string>

    <string name="scan_pay">ReceiveScanPayQR</string>
    <string name="create_qr">ReceiveCreatePayQR</string>
    <string name="ref_num">Reference Number</string>
    <string name="make_new_transaction">New Transaction</string>
    <string name="go_back_to_dashboard">Go to Dashboard</string>
    <string name="amount_value">₱ %s</string>
    <string name="date_time">Date / Time </string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="clear">Clear</string>

    <string name="recent_transactions">Recent Transactions</string>
    <string name="create_scan_qr">CreateScanQR</string>
    <string name="quick_qr">QuickPayQR</string>
    <string name="ph_currency">₱ %s</string>
    <string name="transaction_history">Transaction History</string>
    <string name="cash_out_details">Cash Out Details</string>
    <string name="fee">Fee</string>
    <string name="date">Date</string>
    <string name="transaction_status">Status</string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="message">Message</string>
    <string name="reference_id">Reference ID</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="cancelled">Cancelled</string>
    <string name="income_shares">Income Shares</string>
    <string name="print">Print</string>

    <string name="cash_in_card">Cash In via Credit or Debit Card</string>
    <string name="cash_in_bancnet">Cash In via Bancnet</string>
    <string name="cash_in_grab_pay">Cash In via GrabPay</string>
    <string name="cash_in_gcash">Cash In via GCash</string>
    <string name="cash_in_paymaya">Cash In via Paymaya</string>
    <string name="cash_in_details">Cash In Details</string>
    <string name="hint_card_numbers">Card numbers</string>
    <string name="hint_card_date">MM/YY</string>
    <string name="hint_cvv">CVV</string>
    <string name="hint_card_holder">Cardholder\'s Name</string>
    <string name="scan_client">Scan to Client Cash-In</string>
    <string name="create_qr_message">Show the QR Code to the client to scan.</string>
    <string name="scan_press">Press button to Scan</string>
    <string name="cash_in_minimum_amount">Note: Minimum amount to proceed is php 500.00</string>

    <string-array name="gender_choice_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>