<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uxi.bambupaymerchant.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_client_fund_transfer"
        android:name="com.uxi.bambupaymerchant.fragment.ClientFundFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_client_fund" />

    <fragment
        android:id="@+id/nav_pos_fund_transfer"
        android:name="com.uxi.bambupaymerchant.fragment.POSFundFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pos_fund" />
</navigation>