<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewSmallTitle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/green" />

            <TextView
                style="@style/TextViewSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_details"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_rounded_top_white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/btn_image_document"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_img_preview"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/txt_capture"
                    style="@style/TextViewTiny.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableTop="@drawable/ic_camera"
                    android:drawablePadding="15dp"
                    android:padding="10dp"
                    android:text="@string/capture_id" />

            </RelativeLayout>

            <TextView
                style="@style/TextViewSmallBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/account_details"
                android:textColor="@color/green" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/fname" />

            <EditText
                android:id="@+id/input_fname"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/lname" />

            <EditText
                android:id="@+id/input_lname"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/mobile_number" />

            <EditText
                android:id="@+id/input_mobile_number"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="63 or 09XXXXXXXXX"
                android:inputType="phone"
                android:maxLength="13" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/email" />

            <EditText
                android:id="@+id/input_email"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/password" />

            <EditText
                android:id="@+id/input_password"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minLines="6" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/input_confirm_password"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:minLines="6" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/date_of_birth" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_date_of_birth"
                    style="@style/EditTextViewSmall.Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="textCapWords" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_calendar" />

            </RelativeLayout>

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/gender" />

            <EditText
                android:id="@+id/input_gender"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="textCapWords" />

            <!-- Added Address -->
            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/city" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/house_no" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/street" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/barangay" />

            <EditText
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <!-- Id Number -->
            <TextView
                style="@style/TextViewSmall.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/id_number"
                android:visibility="gone" />

            <EditText
                android:id="@+id/input_id_number"
                style="@style/EditTextViewSmall.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/input_policy"
                style="@style/TextViewSmall.Regular2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:buttonTint="@color/green"
                android:paddingStart="10dp"
                android:text="@string/agreement"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_register"
                style="@style/TextViewSmallBody.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_rounded_green"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_disclaimer"
                style="@style/TextViewSmallBody.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_rounded_white_border_green"
                android:text="@string/disclaimer"
                android:textAllCaps="false"
                android:textColor="@color/green" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>