<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_220sdp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/text_success_message"
        style="@style/TextViewSmallBody.SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="Lorem Ipsum"
        android:textColor="@color/colorPrimary" />

    <TextView
        style="@style/TextViewTiny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/text_amount"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="00" />

    <TextView
        style="@style/TextViewTiny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/date_time" />

    <TextView
        android:id="@+id/text_date"
        style="@style/TextViewSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="June 19, 1970 04:00 PM" />

    <ImageView
        android:id="@+id/image_view_qr_code"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_new_transaction"
        style="@style/TextViewSmallBody.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_green"
        android:text="@string/make_new_transaction"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_okay"
        style="@style/TextViewSmallBody.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_rounded_white_border_green"
        android:text="@string/go_back_to_dashboard"
        android:textAllCaps="false"
        android:textColor="@color/green" />

</LinearLayout>