<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.fragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/TextViewSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="5dp"
                android:text="@string/about_content" />

            <TextView
                style="@style/TextViewSmall.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/txt_copyright"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text="Version 1.0" />

            <TextView
                android:id="@+id/txt_copyright"
                style="@style/TextViewSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/txt_powered"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/copyright" />

            <TextView
                android:id="@+id/txt_powered"
                style="@style/TextViewTiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/powered_by" />

        </RelativeLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>